fix: remove white space below background

--- a/css/main_style.css
+++ b/css/main_style.css
@@ -3,12 +3,15 @@
     --text-color: #053370;
 }
 
+html {
+    background: url("/image/school_image.png") center/ cover no-repeat fixed;
+}
+
 body {
-    background: url("/image/school_image.png") no-repeat;
-    background-size: cover;
+    background-size: transparent;
     color: var(--text-color);
     display: flex;
-    justify-content: center;  
+    justify-content: flex-start;  
     align-items: center;     
     margin: 0;                
     flex-direction: column; 
